libs/bng/test/negative/N0102_molecule_type_too_many_components.bngl
# FAIL
# OUTPUT: error: Molecule type's 'A' component 'a' is used too many times.


begin molecule types
   A(a~P, a~P)
end molecule types

begin seed species
   A(a~P, a~P, a~P) 1
end seed species
